--- a/WifiSimulator/WifiSimulator.csproj
+++ b/WifiSimulator/WifiSimulator.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="F8.cs" />
     <Compile Include="C8.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="ConfigForm.cs">
