添加1200重启线程，当补电线程启动时，同时启动。直到用户自己停止老化

--- a/AgingSystem/AgingSystem.csproj
+++ b/AgingSystem/AgingSystem.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Configuration.xaml.cs">
       <DependentUpon>Configuration.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RebootPumpManager.cs" />
     <Compile Include="DepletePumpManager.cs" />
     <Compile Include="DetailList.xaml.cs">
       <DependentUpon>DetailList.xaml</DependentUpon>
